--- a/app/src/main/res/layout/activity_validate.xml
+++ b/app/src/main/res/layout/activity_validate.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
-    android:layout_margin="40dp"
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
+    android:layout_marginBottom="40dp"
     tools:context="com.example.ammulu.waterbilling.ValidateActivity">
 
     <ImageView
@@ -16,7 +21,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="#000089"
         android:gravity="center"
         android:layout_marginBottom="30dp"
@@ -26,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Billing"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:id="@+id/vbilling"
         android:textColor="#ffffff"
         android:textStyle="bold"
@@ -39,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Collections"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:id="@+id/vcollection"
@@ -48,10 +53,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="back"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:layout_marginTop="30dp"
         android:id="@+id/vback"
         android:background="@drawable/btnred"/>
 </LinearLayout>
+</ScrollView>
