--- a/app/src/main/res/layout/activity_bill.xml
+++ b/app/src/main/res/layout/activity_bill.xml
@@ -1,24 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginRight="30dp"
-    android:layout_marginLeft="30dp"
-    android:layout_marginTop="30dp"
+    android:layout_margin="20dp"
     android:gravity="center"
     tools:context="com.example.ammulu.waterbilling.BillActivity">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/transwaterlogo" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="#000089"
         android:gravity="center"
         android:padding="15dp"
         android:text="Globalm Meter Billing System"/>
-
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:id="@+id/meter"
+        style="@style/spinner_style"
+        android:entries="@array/meters">
+    </Spinner>
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_name"
         android:layout_width="match_parent"
@@ -35,7 +49,7 @@
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="#000"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_flatno"
@@ -53,7 +67,7 @@
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="#000"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_reading"
@@ -71,8 +85,9 @@
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="#000"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
     </android.support.design.widget.TextInputLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -87,42 +102,50 @@
         android:textColor="#fff"
         android:layout_marginBottom="20dp"/>
     <ImageView
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="100dp"
         android:id="@+id/img"/>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:text=""
+        android:gravity="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_margin="10dp"
+        android:textColor="@color/toastcolor"
+        android:id="@+id/billtoast"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal">
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Submit"
         android:layout_weight="1"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:id="@+id/billsubmit"
         android:textColor="#ffffff"
         android:textStyle="bold"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginEnd="5dp"
         android:background="@drawable/btnblue"
-        />
+        tools:ignore="NestedWeights" />
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Back"
-        android:textSize="15dp"
-        android:layout_marginLeft="5dp"
+        android:textSize="15sp"
+        android:layout_marginStart="5dp"
         android:layout_weight="1"
-        android:layout_marginBottom="30dp"
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:id="@+id/b1"
-        android:layout_marginTop="20dp"
         android:background="@drawable/btnred"/>
     </LinearLayout>
 
 </LinearLayout>
+</ScrollView>
