--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginLeft="30dp"
     android:layout_marginRight="30dp"
@@ -18,7 +21,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="#000089"
         android:gravity="center"
         android:text="Globalm Meter Billing System"/>
@@ -39,7 +42,7 @@
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="#000"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_reading"
@@ -57,26 +60,33 @@
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="#000"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
     </android.support.design.widget.TextInputLayout>
-
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="2"
+        android:text=""
+        android:gravity="center"
         android:layout_marginTop="20dp"
-        >
+        android:textStyle="bold"
+        android:id="@+id/collecttoast"
+        android:textColor="@color/toastcolor"
+        android:textSize="18sp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_weight="2">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Submit"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:id="@+id/editcsubmit"
             android:textColor="#ffffff"
             android:layout_weight="1"
             android:textStyle="bold"
-            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginBottom="30dp"
             android:background="@drawable/btnblue"
             />
@@ -84,12 +94,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Back"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:textColor="#ffffff"
             android:layout_weight="1"
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             android:textStyle="bold"
             android:id="@+id/collectionback"
             android:background="@drawable/btnred"/>
+
     </LinearLayout>
 </LinearLayout>
+</ScrollView>
