--- a/app/src/main/res/layout/activity_reports.xml
+++ b/app/src/main/res/layout/activity_reports.xml
@@ -1,41 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
     tools:context="com.example.ammulu.waterbilling.ReportsActivity">
-
+<ImageView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:src="@drawable/transwaterlogo"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
+        android:textSize="20sp"
         android:textColor="#000089"
-        android:padding="20dp"
+        android:padding="10dp"
         android:gravity="center"
         android:text="Globalm Meter Billing System"/>
-    <Spinner
+    <!--<Spinner
+        android:id="@+id/reportmeter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         style="@style/spinner_style"
         android:entries="@array/months">
-    </Spinner>
+    </Spinner>-->
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="17sp"
+        android:textColor="#000089"
+        android:padding="5dp"
+        android:gravity="center"
+        android:text=""
+        android:id="@+id/presdate"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="2"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:id="@+id/newsurveyll"
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:background="@color/colorAccent"
@@ -45,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:gravity="center"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 android:textColor="#fff"
                 android:text="Bills Raised"/>
@@ -54,8 +72,8 @@
                 android:layout_height="wrap_content"
                 android:weightSum="2.0"
                 android:layout_marginTop="40dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginStart="10dp"
                 android:orientation="horizontal">
                 <TextView
                 android:layout_width="match_parent"
@@ -63,24 +81,24 @@
                 android:text="Total Cons :"
                 android:textColor="#fff"
                android:layout_weight="0.75"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:textStyle="bold|italic" />
                 <TextView
                     android:id="@+id/totalcons"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="7"
+                    android:text="0"
                     android:layout_weight="1.25"
                     android:textColor="#fff"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:textStyle="bold|italic" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="5dp"
                 android:orientation="horizontal"
                 android:weightSum="2.0">
 
@@ -90,7 +108,7 @@
                     android:layout_weight="0.75"
                     android:text="Billed :"
                     android:textColor="#fff"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:textStyle="bold|italic" />
 
                 <TextView
@@ -98,17 +116,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1.25"
-                    android:text="5"
+                    android:text="0"
                     android:textColor="#fff"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:textStyle="bold|italic" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:weightSum="2.0"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginStart="10dp"
                 android:orientation="horizontal">
             <TextView
                 android:layout_width="match_parent"
@@ -116,41 +134,41 @@
                 android:text="UnBilled :"
                 android:layout_weight="0.75"
                 android:textColor="#fff"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:textStyle="bold|italic" />
                 <TextView
                     android:id="@+id/unbilled"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="2000"
+                    android:text="0"
                     android:layout_weight="1.25"
                     android:textColor="#fff"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:textStyle="bold|italic" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:weightSum="2.0"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginStart="10dp"
                 android:orientation="horizontal">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Demand :"
                 android:textColor="#fff"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:layout_weight="0.75"
                 android:textStyle="bold|italic" />
                 <TextView
                     android:id="@+id/demand"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="5000"
+                    android:text="0"
                     android:layout_weight="1.25"
                     android:textColor="#fff"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:textStyle="bold|italic" />
             </LinearLayout>
 
@@ -160,8 +178,8 @@
             android:id="@+id/updatesurveyll"
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:background="#55f"
@@ -171,7 +189,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:gravity="center"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 android:textColor="#fff"
                 android:text="Bills Collected"/>
@@ -190,7 +208,7 @@
                     android:layout_weight="0.75"
                     android:text="Bills Paid :"
                     android:textColor="#fff"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:textStyle="bold|italic" />
 
                 <TextView
@@ -198,9 +216,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1.25"
-                    android:text="3"
+                    android:text="0"
                     android:textColor="#fff"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:textStyle="bold|italic" />
             </LinearLayout>
             <LinearLayout
@@ -216,16 +234,16 @@
                 android:text="Unpaid :"
                 android:textColor="#fff"
                 android:layout_weight="0.75"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:textStyle="bold|italic" />
                 <TextView
                     android:id="@+id/unpaid"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="2"
+                    android:text="0"
                     android:layout_weight="1.25"
                     android:textColor="#fff"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:textStyle="bold|italic" />
             </LinearLayout>
             <LinearLayout
@@ -241,21 +259,28 @@
                 android:text="Collection :"
                 android:textColor="#fff"
                 android:layout_weight="0.75"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:textStyle="bold|italic" />
                 <TextView
                     android:id="@+id/collection"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="3000"
+                    android:text="0"
                     android:layout_weight="1.25"
                     android:textColor="#fff"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:textStyle="bold|italic" />
             </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
+        android:visibility="gone"
+        android:id="@+id/progress"/>
     <Button
         android:id="@+id/b3"
         android:layout_width="match_parent"
@@ -266,8 +291,9 @@
         android:background="@drawable/btnred"
         android:text="Back"
         android:textColor="#ffffff"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:textStyle="bold" />
 
 
 </LinearLayout>
+</ScrollView>
