--- a/app/src/main/res/layout/activity_sub_billing.xml
+++ b/app/src/main/res/layout/activity_sub_billing.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context="com.example.ammulu.waterbilling.SubBillingActivity">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fillViewport="true">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,7 +27,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="#000089"
         android:gravity="center"
         android:layout_marginBottom="30dp"
@@ -34,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Billing"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:id="@+id/billing"
         android:textColor="#ffffff"
         android:textStyle="bold"
@@ -47,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Collections"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:id="@+id/collection"
@@ -56,7 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Validate"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:id="@+id/validate"
@@ -66,12 +68,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Back"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:id="@+id/subbillback"
         android:layout_marginTop="30dp"
         android:background="@drawable/btnblue"/>
     </LinearLayout>
-    </ScrollView>
 </LinearLayout>
+</ScrollView>
