--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,15 +8,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginLeft="40dp"
-    android:layout_marginRight="40dp"
-    android:layout_marginBottom="40dp"
+    android:layout_margin="20dp"
     android:gravity="center"
     tools:context="com.example.ammulu.waterbilling.HomeActivity">
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="165dp"
+        android:layout_height="wrap_content"
         android:src="@drawable/transwaterlogo" />
     <TextView
         android:layout_width="wrap_content"
@@ -24,8 +22,8 @@
         android:textSize="20sp"
         android:textColor="#000089"
         android:gravity="center"
-        android:layout_marginBottom="35dp"
-        android:text="Globalm Meter Billing System"/>
+        android:layout_marginBottom="30dp"
+        android:text="Revenue Billing System"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,6 +45,7 @@
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:id="@+id/reports"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/custombutton"/>
     <Button
         android:layout_width="match_parent"
@@ -56,7 +55,6 @@
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:id="@+id/logout"
-        android:layout_marginTop="30dp"
         android:background="@drawable/btnred"/>
 </LinearLayout>
 </ScrollView>
