--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="20dp"
     tools:context="com.example.ammulu.waterbilling.MainActivity">
 
     <LinearLayout
@@ -16,9 +17,8 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="165dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
             android:src="@drawable/transwaterlogo" />
 
         <LinearLayout
@@ -32,7 +32,7 @@
                 android:textSize="20sp"
                 android:textColor="#000089"
                 android:gravity="center"
-                android:text="Globalm Meter Billing System"/>
+                android:text="Revenue Billing System"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
