--- a/app/src/main/res/layout/activity_sub_billing.xml
+++ b/app/src/main/res/layout/activity_sub_billing.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,20 +8,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:layout_margin="20dp"
     android:gravity="center"
     tools:context="com.example.ammulu.waterbilling.SubBillingActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="40dp"
-        android:gravity="center"
-        android:orientation="vertical">
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="165dp"
+        android:layout_height="wrap_content"
         android:src="@drawable/transwaterlogo" />
     <TextView
         android:layout_width="wrap_content"
@@ -31,7 +23,7 @@
         android:textColor="#000089"
         android:gravity="center"
         android:layout_marginBottom="30dp"
-        android:text="Globalm Meter Billing System"/>
+        android:text="Revenue Billing System"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -74,6 +66,5 @@
         android:id="@+id/subbillback"
         android:layout_marginTop="30dp"
         android:background="@drawable/btnblue"/>
-    </LinearLayout>
 </LinearLayout>
 </ScrollView>
